# ShipGate

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_ZH.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: validate.yml
agents/: openai.yaml
docs/: ARCHITECTURE.md  CODE_REVIEW.md  REPORT_SCHEMA.md  THREAT_MODEL.md
scripts/: __init__.py  check_coverage_thresholds.py  install_skill.py  shipgate.py
shipgate/: __init__.py  __main__.py  cli.py  engine.py  git_surface.py  inventory.py  model.py  reporting.py
shipgate/checks/: __init__.py  assets.py  project.py  readme.py  redaction.py
tests/: helpers.py  test_cli_and_reporting.py  test_core_units.py  test_error_paths.py  test_git_surface.py  test_install_skill.py  test_publication_metadata.py  test_regressions.py  test_shipgate.py
