[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shipgate"
version = "0.2.0"
description = "Fail-closed publication checks for macOS apps and Codex skills"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6,<8",
  "mypy>=1.15,<2",
  "ruff>=0.11,<1",
]

[project.scripts]
shipgate = "shipgate.cli:main"

[tool.setuptools.packages.find]
include = ["shipgate*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.coverage.run]
branch = true
source = ["shipgate"]

[tool.coverage.report]
show_missing = true
skip_covered = false
